--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-numpy==1.26.3
+scikit-learn==1.2.2
+numpy==1.24.3
 Cython==0.29.36
-scikit-learn==1.3.2
 streamlit==1.29.0
 streamlit-option-menu==0.3.6
 python-3.10.14
+--only-binary=:all:
+
+
+
